--- a/home-en.html
+++ b/home-en.html
@@ -30,7 +30,7 @@
                 <a href="unregister-tutorial-en.html" id="rule" class="text-2xl text-white hover:text-gray-500">
                     How To Play
                 </a>
-                <a href="#" id="tactics" class="text-2xl text-white hover:text-gray-500">
+                <a href="tactics-en.html" id="tactics" class="text-2xl text-white hover:text-gray-500">
                     Tactics
                 </a>
                 <a href="#" id="search" class="text-2xl text-white hover:text-gray-500">
