--- a/tactics-en.html
+++ b/tactics-en.html
@@ -128,7 +128,7 @@
         </div>
         <div class="h-4"></div>
         <div id="tactics_list">
-            <div id="tactic" onclick="location.href='tenpai-dragon-guide.html'">
+            <div id="tactic">
                 <img src="image/Tenpai Dragon Guide.png" alt="tactics">
                 <div id="guide-background">
                 </div>
