--- a/tactics-en.html
+++ b/tactics-en.html
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div id="menu" class="flex items-center justify-between">
-                <a href="register-tutorial-en.html" id="rule" class="text-2xl text-white hover:text-gray-500">
+                <a href="unregister-tutorial-en.html" id="rule" class="text-2xl text-white hover:text-gray-500">
                     How To Play
                 </a>
                 <a href="tactics-en.html" id="tactics" class="text-2xl text-white hover:text-gray-500">
