--- a/unregister-tutorial-en.html
+++ b/unregister-tutorial-en.html
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="#" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="tactics-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
                     Tactics
                 </a>
             </div>
