--- a/home-vn.html
+++ b/home-vn.html
@@ -54,17 +54,17 @@
         </div>
         <div id="alternative-menu" class="flex items-center justify-around">
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="unregister-tutorial-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="unregister-tutorial-en.html" class="text-sm text-white hover:text-gray-500 p-2">
                     Hướng Dẫn Chơi
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="#" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="#" class="text-sm text-white hover:text-gray-500 p-2">
                     Chiến Thuật
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="#" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="#" class="text-sm text-white hover:text-gray-500 p-2">
                     Tìm Kiếm
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
