--- a/tactics-en.html
+++ b/tactics-en.html
@@ -35,6 +35,7 @@
                 </a>
                 <a href="#" id="search" class="text-2xl text-white hover:text-gray-500">
                     Search
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
             </div>
             <div id="register-login" class="flex items-center justify-center">
