--- a/unregister-tutorial-en.html
+++ b/unregister-tutorial-en.html
@@ -16,6 +16,7 @@
         }
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/b9604df615.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="page" class="flex bg-gray-900">
@@ -34,6 +35,7 @@
                 </a>
                 <a href="#" id="search" class="text-2xl text-white hover:text-gray-500">
                     Search
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
             </div>
             <div id="register-login" class="flex items-center justify-center">
