--- a/register-tutorial-en.html
+++ b/register-tutorial-en.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How To Play Yu-gi-oh</title>
     <link rel="stylesheet" href="tutorial.css">
+    <script src="https://kit.fontawesome.com/b9604df615.js" crossorigin="anonymous"></script>
     <script>
         function facebook() 
         {
@@ -34,11 +35,12 @@
                 </a>
                 <a href="#" id="search" class="text-2xl text-white hover:text-gray-500">
                     Search
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
             </div>
             <div id="register-login" class="flex items-center justify-center">
                 <a href="register-form-en.html" id="login" class="text-xl text-gray-600 hover:text-white">
-                    Log Uot
+                    Log Out
                 </a>
             </div>
             <div id="language" class="flex items-center justify-center">
