--- a/unregister-tutorial-en.html
+++ b/unregister-tutorial-en.html
@@ -64,17 +64,17 @@
         </div>
         <div id="alternative-menu" class="flex items-center justify-around">
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="unregister-tutorial-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="unregister-tutorial-en.html" class="text-xl text-white hover:text-gray-500 p-2">
                     How To Play
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="tactics-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="tactics-en.html" class="text-xl text-white hover:text-gray-500 p-2">
                     Tactics
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="#" class="text-2xl text-white hover:text-gray-500 p-2">
+                <a href="#" class="text-xl text-white hover:text-gray-500 p-2">
                     Search
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
