--- a/unregister-tutorial-en.html
+++ b/unregister-tutorial-en.html
@@ -16,7 +16,6 @@
         }
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://kit.fontawesome.com/b9604df615.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="page" class="flex bg-gray-900">
@@ -35,7 +34,6 @@
                 </a>
                 <a href="#" id="search" class="text-2xl text-white hover:text-gray-500">
                     Search
-                    <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
             </div>
             <div id="register-login" class="flex items-center justify-center">
@@ -64,17 +62,17 @@
         </div>
         <div id="alternative-menu" class="flex items-center justify-around">
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="unregister-tutorial-en.html" class="text-xl text-white hover:text-gray-500 p-2">
+                <a href="unregister-tutorial-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
                     How To Play
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="tactics-en.html" class="text-xl text-white hover:text-gray-500 p-2">
+                <a href="tactics-en.html" class="text-2xl text-white hover:text-gray-500 p-2">
                     Tactics
                 </a>
             </div>
             <div class="bg-gray-700 opacity-75 rounded-3xl">
-                <a href="#" class="text-xl text-white hover:text-gray-500 p-2">
+                <a href="#" class="text-2xl text-white hover:text-gray-500 p-2">
                     Search
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
